--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>Spot Bugs</artifactId>
+    <artifactId>SpotBugs</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -92,7 +92,16 @@
             </plugin>
             <plugin>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.1.2</version>
+                <dependencies>
+                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-project-info-reports-plugin -->
+                    <dependency>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-project-info-reports-plugin</artifactId>
+                     <version>3.1.2</version>
+                    </dependency>
+                </dependencies>
+
             </plugin>
         </plugins>
     </build>
